# onion-compressor-framework

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  ci_gate.yml
docs/: benchmarks.md  container_v6_mbn.md  design-notes.md  dir_pipeline_spec.md  exit_codes.md  formats.md  gca1_format.md  pipeline_spec.md  roadmap.md
scripts/: bench_all.sh  gen_exit_codes_md.py  run_p0.sh
src/gcc_ocf/: cli.py  cli_verify_json.py  dir_index.py  dir_pack_report.py  dir_pipeline_spec.py  errors.py  pipeline_spec.py  single_container_dir.py  single_container_mixed_dir.py  verify.py
src/python/: gcc_analyze.py  gcc_dir.py  gcc_huffman.py
src/tools/: top_pipelines.json
tests/: README.md  conftest.py  run_roundtrip.sh  test_arch_boundaries.py  test_cli_smoke.py  test_d7_fixtures.py  test_dir_autopick_forces_tpl_shared.py  test_dir_pack_jobs_parallel.py  test_dir_pack_report.py  test_dir_pack_unpack_resources.py  test_dir_pipeline_spec.py  test_dir_roundtrip_tree.py  test_file_roundtrip_semantic.py  test_mbn_vectors.py  test_num_v1_vectors.py  test_p0_cli_invariants.py  test_p1_determinism.py  test_p1_mixed_verify_exit_codes.py  test_p1_zstd_matrix.py  test_p2_bench_smoke.py  test_p2_runner_contract.py  test_pipeline_spec.py  test_single_container_dir.py  test_single_container_mixed_dir.py  test_tpl_lines_shared_v0_base_dict.py  test_verify.py  test_verify_json_schema.py  test_zstd_resolution.py
tests/data/: fattura_like.txt.v3.dec.txt  (+4 more)
tools/: __init__.py  bench_dir.py  check_arch_boundaries.py  smoke_general.py
(+42 files in other folders)
