[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcc-ocf"
version = "0.0.0"
description = "GCC Onion Compressor Framework (GCC-OCF)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name="Giancarlo Cicellyn Comneno"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "pre-commit>=3"]

[project.scripts]
gcc-ocf = "gcc_ocf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
